[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
util = { path = "../util" }
model = { path = "../model" }
view = { path = "../view" }
controller = { path = "../controller" }

rltk = "0.8.1"
getrandom = { version = "0.2", features = ["js"] }